<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ariche.domotest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lights"
        android:name="com.ariche.domotest.ui.lights.LightsFragment"
        android:label="@string/title_lights"
        tools:layout="@layout/fragment_lights" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="com.ariche.domotest.ui.network.NetworkFragment"
        android:label="@string/title_network"
        tools:layout="@layout/fragment_network" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ariche.domotest.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ariche.domotest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>